adding of columns

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
 
     <div class="studio">
+        <img src="images/logo.png" alt="">
 
         <h1>WELCOME</h1>
         <h2>TO DELANI STUDIO</h2>
@@ -24,9 +25,9 @@
 
 
 
-    <div class="services">
 
 
+    <div class="approach">
         <h2>ABOUT US</h2>
         <p>When you work with us,you are a part of a team of committed collaboration.All aspects of our software
             development process are integrated,interactive and agile</p>
@@ -48,9 +49,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <img src="images/design_icon.png" alt=""></div>
+                    <img src="images/design_icon.png" alt="">
+                <p>design</p></div>
                 <div class="col-md-4">
                     <img src="images/dev_icon.png" alt="">
+                    <p>development</p>
                 </div>
                 <div class="col-md-2">
                     <img src="images/product_icon.png" alt=""></div>
@@ -83,19 +86,35 @@
 
 
                 <div class="personal">
-                    <form class="form-inline">
-                        <div class="form-group">
-                            <label for="name">Name</label>
-                            <input type="text" class="form-control" id="name" placeholder="eg,name">
-                        </div>
-                        <div class="form-group">
-                            <label for="email">Email</label>
-                            <input type="email" class="form-control" id="email" placeholder="eg gmail">
-                        </div>
-                    </form>
+                <div class="row">
+                <div class="form-group">
+                    <label for="name">Name</label>
+                    <input type="text" class="form-control" id="name" placeholder="eg,name">
                 </div>
 
-                </form>
+
+                <div class="margi">
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" class="form-control" id="email" placeholder="eg gmail">
+                </div>
+                </div>
+                </div>
+                
+
+                <div class="text-area-box">
+                    <label for="text-area"></label>
+                    <textarea class="form-control " id="FormControl" rows="8"
+                        placeholder="your massage here..."></textarea>
+                </div>
+            </div>
+
+
+
+            
+        </div>
+
+        </form>
 
 
 
