adding of comments

--- a/index.html
+++ b/index.html
@@ -38,28 +38,31 @@
 
 
     <div class="about">
-        <h2>services</h2>
+        <h2>SERVICES</h2>
         <p>before we sign a contract or write a line of code our team will spend the necessary time needed to understand
             your product vision </p>
         <p>The outcome of this scoping session is a proposal or high-level statement of work.</p>
         <p>Based on your requirements,we can provide a complete offering or just the pieces you need</p>
     </div>
     <div class="what we do">
-        <h2>what we do</h2>
+        <h2>WHAT WE DO</h2>
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
                     <img src="images/design_icon.png" alt="">
-                <p>design</p></div>
+                    <h3>design</h3>
+                    <p>it is designed with experienced people who actually help you reach your business goals,make future ammends and return back to the community</p>
+                </div>
                 <div class="col-md-4">
                     <img src="images/dev_icon.png" alt="">
-                    <p>development</p>
+                    <h3>development</h3>
                 </div>
                 <div class="col-md-2">
-                    <img src="images/product_icon.png" alt=""></div>
+                    <img src="images/product_icon.png" alt="">
+                <h3>project management</h3></div>
             </div>
             <div class="portfolio">
-                <h4>portfolio</h4>
+                <h2>PORTFOLIO</h2>
                 <div class="row">
                     <div class="col-md-3">
                         <img src="images/work4.jpg" alt=""></div>
@@ -86,35 +89,53 @@
 
 
                 <div class="personal">
-                <div class="row">
-                <div class="form-group">
-                    <label for="name">Name</label>
-                    <input type="text" class="form-control" id="name" placeholder="eg,name">
+                    <div class="row">
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <input type="text" class="form-control" id="name" placeholder="eg,name">
+                        </div>
+
+
+                        <div class="margi">
+                            <div class="form-group">
+                                <label for="email">Email</label>
+                                <input type="email" class="form-control" id="email" placeholder="eg gmail">
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="text-area-box">
+                        <label for="text-area"></label>
+                        <textarea class="form-control " id="FormControl" rows="8"
+                            placeholder="your massage here..."></textarea>
+                    </div>
                 </div>
 
 
-                <div class="margi">
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" class="form-control" id="email" placeholder="eg gmail">
-                </div>
-                </div>
-                </div>
-                
 
-                <div class="text-area-box">
-                    <label for="text-area"></label>
-                    <textarea class="form-control " id="FormControl" rows="8"
-                        placeholder="your massage here..."></textarea>
-                </div>
+
             </div>
 
 
-
-            
+            </form>
+            <div class="row">
+                <div class="imgs">
+                    <img src="images/twitter.png" alt="">
+                    <img src="images/stumble_upon.png" alt="">
+                    <img src="images/skype.png" alt="">
+                    <img src="images/facebook.png" alt="">
+                    <img src="images/g_plus.png" alt="">
+                    <img src="images/mouse_click.png" alt="">
+                    <img src="images/dribble.png" alt="">
+                </div>
+            </div>
         </div>
+    </div>
+    <div class="obtis">
+    <h3>DELANI STUDIO</h3>
+    </div>
 
-        </form>
 
 
 
