addition of mouse logo

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <h1>WELCOME</h1>
         <h2>TO DELANI STUDIO</h2>
         <h6>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</h6>
+        <img src="images/mouse_click.png" alt="">
     </div>
     </div>
 
