addition of pharagraphs

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title></title>
     <link rel="stylesheet" href="css/css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="css/style.css " type="text/css">
+    <script src="https://code.jquery.com/jquery-3.4.1.js"
+        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+    <script src="js/scripts.js"></script>
 
 
 </head>
@@ -52,15 +55,25 @@
                 <div class="col-md-4">
                     <img src="images/design_icon.png" alt="">
                     <h3>design</h3>
-                    <p>it is designed with experienced people who actually help you reach your business goals,make future ammends and return back to the community</p>
+                    <p>our design practise offers a full range of services including brand strategy,interaction and
+                        visual design and user experiencing testing</p>
+                    <p>Throughout your project,our designer create and implement visual design and workflows.solicite
+                        users feedback and work with you to make sure what get built is needed</p>
                 </div>
                 <div class="col-md-4">
                     <img src="images/dev_icon.png" alt="">
                     <h3>development</h3>
+                    <p>all engineers are fluent in the latest enterprise,mobile and web development technologies</p>
+                    <p>they collaborate with your team to write and improve code on a daily basis,using proven practises
+                        such as test-driven development and pair programming</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-4">
                     <img src="images/product_icon.png" alt="">
-                <h3>project management</h3></div>
+                    <h3>project management</h3>
+                    <p>planning and development is iterative.because we are constantly coding and testing,the products
+                        we build are always ready to go live</p>
+                    <p>this iterative process allows for change as business requirements evolve</p>
+                </div>
             </div>
             <div class="portfolio">
                 <h2>PORTFOLIO</h2>
@@ -134,7 +147,7 @@
         </div>
     </div>
     <div class="obtis">
-    <h3>DELANI STUDIO</h3>
+        <h3>DELANI STUDIO</h3>
     </div>
 
 
