--- a/index.html
+++ b/index.html
@@ -53,102 +53,110 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <img src="images/design_icon.png" alt="">
+                    <img src="images/design_icon.png" class="image1" alt="">
                     <h3>design</h3>
                     <p>our design practise offers a full range of services including brand strategy,interaction and
                         visual design and user experiencing testing</p>
                     <p>Throughout your project,our designer create and implement visual design and workflows.solicite
                         users feedback and work with you to make sure what get built is needed</p>
                 </div>
+                
                 <div class="col-md-4">
-                    <img src="images/dev_icon.png" alt="">
+                    <div class="clickable2">
+                    <img src="images/dev_icon.png" class="image2" alt="">
                     <h3>development</h3>
                     <p>all engineers are fluent in the latest enterprise,mobile and web development technologies</p>
                     <p>they collaborate with your team to write and improve code on a daily basis,using proven practises
                         such as test-driven development and pair programming</p>
-                </div>
-                <div class="col-md-4">
-                    <img src="images/product_icon.png" alt="">
-                    <h3>project management</h3>
-                    <p>planning and development is iterative.because we are constantly coding and testing,the products
-                        we build are always ready to go live</p>
-                    <p>this iterative process allows for change as business requirements evolve</p>
-                </div>
-            </div>
-            <div class="portfolio">
-                <h2>PORTFOLIO</h2>
-                <div class="row">
-                    <div class="col-md-3">
-                        <img src="images/work4.jpg" alt=""></div>
-                    <div class="col-md-3">
-                        <img src="images/work3.jpg" alt=""></div>
-                    <div class="col-md-3">
-                        <img src="images/work2.jpg" alt=""></div>
-                    <div class="col-md-2">
-                        <img src="images/work1.jpg" alt=""></div>
-                </div>
-                <div class="row">
-                    <div class="col-md-3">
-                        <img src="images/work5.jpg" alt=""></div>
-                    <div class="col-md-3">
-                        <img src="images/work6.jpg" alt=""></div>
-                    <div class="col-md-3">
-                        <div class="ken">
-                            <img src="images/work7.jpg" alt=""></div>
-                    </div>
-                    <div class="col-md-3">
-                        <img src="images/work8.jpg" alt=""></div>
-                </div>
-
-
-
-                <div class="personal">
-                    <div class="row">
-                        <div class="form-group">
-                            <label for="name">Name</label>
-                            <input type="text" class="form-control" id="name" placeholder="eg,name">
                         </div>
+                </div>
+                
+                    <div class="col-md-4">
+                        <div class="clickable3">
+                        <img src="images/product_icon.png" alt="image3">
+                        <h3>project management</h3>
+                        <div class="whendo">
+                            <p>planning and development is iterative.because we are constantly coding and testing,the
+                                products
+                                we build are always ready to go live</p>
+                            <p>this iterative process allows for change as business requirements evolve</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio">
+                    <h2>PORTFOLIO</h2>
+                    <div class="row">
+                        <div class="col-md-3">
+                            <img src="images/work4.jpg" alt=""></div>
+                        <div class="col-md-3">
+                            <img src="images/work3.jpg" alt=""></div>
+                        <div class="col-md-3">
+                            <img src="images/work2.jpg" alt=""></div>
+                        <div class="col-md-2">
+                            <img src="images/work1.jpg" alt=""></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-3">
+                            <img src="images/work5.jpg" alt=""></div>
+                        <div class="col-md-3">
+                            <img src="images/work6.jpg" alt=""></div>
+                        <div class="col-md-3">
+                            <div class="ken">
+                                <img src="images/work7.jpg" alt=""></div>
+                        </div>
+                        <div class="col-md-3">
+                            <img src="images/work8.jpg" alt=""></div>
+                    </div>
 
 
-                        <div class="margi">
+
+                    <div class="personal">
+                        <div class="row">
                             <div class="form-group">
-                                <label for="email">Email</label>
-                                <input type="email" class="form-control" id="email" placeholder="eg gmail">
+                                <label for="name">Name</label>
+                                <input type="text" class="form-control" id="name" placeholder="eg,name">
+                            </div>
+
+
+                            <div class="margi">
+                                <div class="form-group">
+                                    <label for="email">Email</label>
+                                    <input type="email" class="form-control" id="email" placeholder="eg gmail">
+                                </div>
                             </div>
                         </div>
+
+
+                        <div class="text-area-box">
+                            <label for="text-area"></label>
+                            <textarea class="form-control " id="FormControl" rows="8"
+                                placeholder="your massage here..."></textarea>
+                        </div>
                     </div>
 
 
-                    <div class="text-area-box">
-                        <label for="text-area"></label>
-                        <textarea class="form-control " id="FormControl" rows="8"
-                            placeholder="your massage here..."></textarea>
-                    </div>
+
+
                 </div>
 
 
-
-
-            </div>
-
-
-            </form>
-            <div class="row">
-                <div class="imgs">
-                    <img src="images/twitter.png" alt="">
-                    <img src="images/stumble_upon.png" alt="">
-                    <img src="images/skype.png" alt="">
-                    <img src="images/facebook.png" alt="">
-                    <img src="images/g_plus.png" alt="">
-                    <img src="images/mouse_click.png" alt="">
-                    <img src="images/dribble.png" alt="">
+                </form>
+                <div class="row">
+                    <div class="imgs">
+                        <img src="images/twitter.png" alt="">
+                        <img src="images/stumble_upon.png" alt="">
+                        <img src="images/skype.png" alt="">
+                        <img src="images/facebook.png" alt="">
+                        <img src="images/g_plus.png" alt="">
+                        <img src="images/mouse_click.png" alt="">
+                        <img src="images/dribble.png" alt="">
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="obtis">
-        <h3>DELANI STUDIO</h3>
-    </div>
+        <div class="obtis">
+            <h3>DELANI STUDIO</h3>
+        </div>
 
 
 
