--- a/index.html
+++ b/index.html
@@ -53,27 +53,36 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <img src="images/design_icon.png" class="image1" alt="">
-                    <h3>design</h3>
-                    <p>our design practise offers a full range of services including brand strategy,interaction and
-                        visual design and user experiencing testing</p>
-                    <p>Throughout your project,our designer create and implement visual design and workflows.solicite
-                        users feedback and work with you to make sure what get built is needed</p>
+                    <div class="clickable1">
+                        <img src="images/design_icon.png" class="image1" alt="">
+                        <h3>design</h3>
+                        <div class="willdo">
+                        <p>our design practise offers a full range of services including brand strategy,interaction and
+                            visual design and user experiencing testing</p>
+                        <p>Throughout your project,our designer create and implement visual design and
+                            workflows.solicite
+                            users feedback and work with you to make sure what get built is needed</p>
+                            </div>
+                    </div>
                 </div>
-                
+
                 <div class="col-md-4">
                     <div class="clickable2">
-                    <img src="images/dev_icon.png" class="image2" alt="">
-                    <h3>development</h3>
-                    <p>all engineers are fluent in the latest enterprise,mobile and web development technologies</p>
-                    <p>they collaborate with your team to write and improve code on a daily basis,using proven practises
-                        such as test-driven development and pair programming</p>
+                        <img src="images/dev_icon.png" class="image2" alt="">
+                        <h3>DEVELOPMENT</h3>
+                        <div class="whydo">
+                            <p>all engineers are fluent in the latest enterprise,mobile and web development technologies
+                            </p>
+                            <p>they collaborate with your team to write and improve code on a daily basis,using proven
+                                practises
+                                such as test-driven development and pair programming</p>
                         </div>
+                    </div>
                 </div>
-                
-                    <div class="col-md-4">
-                        <div class="clickable3">
-                        <img src="images/product_icon.png" alt="image3">
+
+                <div class="col-md-4">
+                    <div class="clickable3">
+                        <img src="images/product_icon.png" class="image3" alt="">
                         <h3>project management</h3>
                         <div class="whendo">
                             <p>planning and development is iterative.because we are constantly coding and testing,the
