changes in hover

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         <div class="col-md-3">
                             <div class="ken">
                                 <div id=create7>
-                                    <div class="carousel-caption create7">seen</div>
+                                    <div class="carousel-caption create7">burner</div>
                                     <img src="images/work7.jpg" alt="">
                                 </div>
                             </div>
@@ -155,7 +155,7 @@
 
                         <div class="col-md-3">
                             <div id="create8">
-                                <div class="carousel-caption create8">collabo</div>
+                                <div class="carousel-caption create8">giraffe restaurant</div>
                                 <img src="images/work8.jpg" alt="">
                             </div>
                         </div>
