--- a/index.html
+++ b/index.html
@@ -243,12 +243,15 @@
                         <img src="images/g_plus.png" alt="">
                         <img src="images/mouse_click.png" alt="">
                         <img src="images/dribble.png" alt="">
+                        <img src="images/pinterest.png" alt="">
+                        
                     </div>
                 </div>
             </div>
 
             <div class="obtis">
                 <h3>DELANI STUDIO</h3>
+                <h2>2019</h2>
             </div>
 
 
