--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
 
 
                         <div class="personal">
+                            <h2>CONTACT US</h2>
                             <form
                                 action="https://github.us4.list-manage.com/subscribe/post?u=c6148bf4a7c3879eb3e22374b&amp;id=e0bae267a2"
                                 method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
@@ -204,7 +205,7 @@
                                                 type="text" name="b_c6148bf4a7c3879eb3e22374b_e0bae267a2" tabindex="-1"
                                                 value=""></div>
                                         <div class="clear"><input type="submit" value="Subscribe" name="subscribe"
-                                                id="mc-embedded-subscribe" class="button"></div>
+                                                id="mc-embedded-subscribe" class="button" onclick="alertMessage()"></div>
                                     </div>
                                 </div>
                             </form>
@@ -214,15 +215,7 @@
 
 
                     </div>
-                    <div id="mce-responses" class="clear">
-                        <div class="response" id="mce-error-response" style="display:none"></div>
-                        <div class="response" id="mce-success-response" style="display:none"></div>
-                    </div>
-                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
-                            name="b_c6148bf4a7c3879eb3e22374b_e0bae267a2" tabindex="-1" value=""></div>
-                    <div class="clear"><input type="submit" value="Subscribe" name="subscribe"
-                            id="mc-embedded-subscribe" class="button"></div>
+                    
                 </div>
 
 
