--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <p>The outcome of this scoping session is a proposal or high-level statement of work.</p>
         <p>Based on your requirements,we can provide a complete offering or just the pieces you need</p>
     </div>
-    <div class="what we do">
+    <div class="what-we-do">
         <h2>WHAT WE DO</h2>
         <div class="container">
             <div class="row">
@@ -172,12 +172,17 @@
                                 action="https://github.us4.list-manage.com/subscribe/post?u=c6148bf4a7c3879eb3e22374b&amp;id=e0bae267a2"
                                 method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
                                 class="validate" target="_blank" novalidate>
+                                <div class="container">
                                 <div class="row">
-                                    <div class="col-md-2">
+                                    <div class="col-md-6">
                                         <div class="form-group">
+
+
                                             <label for="name">Name</label>
                                             <input type="text" class="form-control" id="name" placeholder="eg,name">
+
                                         </div>
+
                                     </div>
 
                                     <div class="margi">
@@ -189,35 +194,36 @@
                                                     <input type="email" value="" name="EMAIL" class="required email"
                                                         id="mce-EMAIL">
                                                 </div>
-
                                             </div>
                                         </div>
-                                        <div class="mc-field-group">
-                                            <label for="mce-MMERGE2">message </label>
-                                            <input type="text" value="" name="MMERGE2" class="" id="mce-MMERGE2">
-                                        </div>
-                                        <div id="mce-responses" class="clear">
-                                            <div class="response" id="mce-error-response" style="display:none"></div>
-                                            <div class="response" id="mce-success-response" style="display:none"></div>
-                                        </div>
-                                        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input
-                                                type="text" name="b_c6148bf4a7c3879eb3e22374b_e0bae267a2" tabindex="-1"
-                                                value=""></div>
-                                        <div class="clear"><input type="submit" value="Subscribe" name="subscribe"
-                                                id="mc-embedded-subscribe" class="button" onclick="alertMessage()"></div>
+
                                     </div>
                                 </div>
-                            </form>
+                            </div>
+                                <div class="mc-field-group">
+                                    <label for="mce-MMERGE2">message </label>
+                                    <input type="text" value="" name="MMERGE2" class="" id="mce-MMERGE2">
+                                </div>
+                                <div id="mce-responses" class="clear">
+                                    <div class="response" id="mce-error-response" style="display:none"></div>
+                                    <div class="response" id="mce-success-response" style="display:none"></div>
+                                </div>
+                                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+                                        name="b_c6148bf4a7c3879eb3e22374b_e0bae267a2" tabindex="-1" value=""></div>
+                                <div class="clear"><input type="submit" value="Subscribe" name="subscribe"
+                                        id="mc-embedded-subscribe" class="button" onclick="alertMessage()"></div>
                         </div>
 
-
-
-
+                        </form>
                     </div>
-                    
+
+
+
+
                 </div>
 
+            </div>
 
 
 
@@ -226,26 +232,27 @@
 
 
 
-                </form>
-                <div class="row">
-                    <div class="imgs">
-                        <img src="images/twitter.png" alt="">
-                        <img src="images/stumble_upon.png" alt="">
-                        <img src="images/skype.png" alt="">
-                        <img src="images/facebook.png" alt="">
-                        <img src="images/g_plus.png" alt="">
-                        <img src="images/mouse_click.png" alt="">
-                        <img src="images/dribble.png" alt="">
-                        <img src="images/pinterest.png" alt="">
-                        
-                    </div>
+
+            </form>
+            <div class="row">
+                <div class="imgs">
+                    <img src="images/twitter.png" alt="">
+                    <img src="images/stumble_upon.png" alt="">
+                    <img src="images/skype.png" alt="">
+                    <img src="images/facebook.png" alt="">
+                    <img src="images/g_plus.png" alt="">
+                    <img src="images/mouse_click.png" alt="">
+                    <img src="images/dribble.png" alt="">
+                    <img src="images/pinterest.png" alt="">
+
                 </div>
             </div>
+        </div>
 
-            <div class="obtis">
-                <h3>DELANI STUDIO</h3>
-                <h2>2019</h2>
-            </div>
+        <div class="obtis">
+            <h3>DELANI STUDIO</h3>
+            <h2>2019</h2>
+        </div>
 
 
 
